<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyProfileActivity">

    <ImageView
        android:layout_marginTop="@dimen/image_marginTop"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_width="@dimen/profile_image_width"
        android:layout_height="@dimen/profile_image_height"
        android:src="@drawable/profile_pic"
        android:contentDescription="@string/image_description" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/line"
        android:layout_centerInParent="true"
        android:layout_marginBottom="7dp"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/my_name"
        android:textAlignment="center"
        android:textSize="@dimen/name_text_size"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:background="@color/colorAccent"
        android:id="@+id/line"
        android:layout_centerInParent="true"
        android:layout_height="3dp"/>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:padding="11dp"
        android:layout_below="@id/line"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginBottom="15dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginBottom="15dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginBottom="15dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginBottom="15dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginBottom="15dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/slack_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
</RelativeLayout>