<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:fontFamily="@font/fredoka_one"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/textPrimary"
        android:textSize="35sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn1"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt1"
        android:layout_marginTop="90dp"
        android:text="@string/about_alc"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btn2"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn1"
        android:layout_marginTop="50dp"
        android:text="@string/profile"
        android:layout_centerHorizontal="true" />

</RelativeLayout>